fix onboarding / task design for wrapped ionic style and light design

--- a/dapps/onboarding/src/components/terms-of-use/terms-of-use.scss
+++ b/dapps/onboarding/src/components/terms-of-use/terms-of-use.scss
@@ -25,49 +25,53 @@
   https://evan.network/license/
 */
 
-terms-of-use {
-  height: 100%;
+.evan-angular {
+  terms-of-use {
+    height: 100%;
 
-  .vertical-center-container {
-    overflow-y: auto;
+    .vertical-center-container {
+      overflow-y: auto;
 
-    margin-top: 10px;
+      margin-top: 10px;
 
-    text-align: justify;
+      text-align: justify;
 
-    background-color: rgba(0, 13, 26, 0.6);
+      background-color: rgba(0, 13, 26, 0.6);
 
-    @media (max-width: 768px) {
-      height: calc(100% - 20px);
+      @media (max-width: 768px) {
+        height: calc(100% - 20px);
+      }
+
+      @media (min-width: 769px) {
+        height: 70%;
+        margin-top: 10%;
+        padding: 30px 30px;
+      }
+
+      & > div {
+        display: block;
+
+        height: 100%;
+        margin-right: 10px;
+        margin-left: 10px;
+      }
     }
 
-    @media (min-width: 769px) {
-      height: 70%;
-      margin-top: 10%;
-      padding: 30px 30px;
+    ion-footer {
+      display: flex;
+
+      button {
+        width: 50%;
+      }
     }
 
-    & > div {
-      display: block;
+    iframe {
+      visibility: hidden;
 
-      height: 100%;
-      margin-left: 10px;
-      margin-right: 10px;
+      width: 100%;
+      height: 85px;
+
+      border: 0;
     }
-  }
-
-  ion-footer {
-    display: flex;
-
-    button {
-      width: 50%;
-    }
-  }
-
-  iframe {
-    border: 0;
-    width: 100%;
-    height: 85px;
-    visibility: hidden;
   }
 }
